stripy fix height of nav so it flexes if the menu wraps to 2 lines. #3836

--- a/openscholar/themes/stripy/css/stripy.css
+++ b/openscholar/themes/stripy/css/stripy.css
@@ -119,10 +119,13 @@ body.two-sidebars .region-sidebar-first {
     }
 
 #menu-bar {
-  background:url('../images/nav.png') repeat-x 0 0 #fff;
-  padding: 8px 0 15px 0;
-  height: 40px;
-  line-height: 40px;
+  background: rgb(166, 89, 58);
+background: -moz-linear-gradient(270deg, rgb(166, 89, 58) 30%, rgb(192, 115, 84) 70%);
+background: -webkit-linear-gradient(270deg, rgb(166, 89, 58) 30%, rgb(192, 115, 84) 70%);
+background: -o-linear-gradient(270deg, rgb(166, 89, 58) 30%, rgb(192, 115, 84) 70%);
+background: -ms-linear-gradient(270deg, rgb(166, 89, 58) 30%, rgb(192, 115, 84) 70%);
+background: linear-gradient(0deg, rgb(166, 89, 58) 30%, rgb(192, 115, 84) 70%);
+margin-bottom:10px;
   }
 
 #menu-bar li {
@@ -135,6 +138,7 @@ body.two-sidebars .region-sidebar-first {
 #menu-bar li a, #menu-bar li a:visited {
     color: #f5f5d8;
     text-decoration:none;
+    padding:8px 10px;
     }
 
 #menu-bar li a:hover, #menu-bar li a.active {
