--- a/openscholar/themes/stripy/flavors/emerald/emerald.css
+++ b/openscholar/themes/stripy/flavors/emerald/emerald.css
@@ -9,7 +9,12 @@ body.navbar-off #page {
   }
 
 #menu-bar {
-  background-image: url('images/nav-emerald.png');
+  background: rgb(66, 105, 79);
+background: -moz-linear-gradient(270deg, rgb(66, 105, 79) 30%, rgb(91, 130, 104) 70%);
+background: -webkit-linear-gradient(270deg, rgb(66, 105, 79) 30%, rgb(91, 130, 104) 70%);
+background: -o-linear-gradient(270deg, rgb(66, 105, 79) 30%, rgb(91, 130, 104) 70%);
+background: -ms-linear-gradient(270deg, rgb(66, 105, 79) 30%, rgb(91, 130, 104) 70%);
+background: linear-gradient(0deg, rgb(66, 105, 79) 30%, rgb(91, 130, 104) 70%);
   }
 
 .biblio-title a, .biblio-title-chicago a,
